# aws-multi-account

./: .gitignore  Makefile  README.md  pyproject.toml  root.hcl  test_infrastructure.py
.github/workflows/: lint-and-test-infra.yaml  lint-and-test-scripts.yaml
accounts/mbg-backup/: account_details.hcl  provider.tf
accounts/mbg-infrastructure-development/: account_details.hcl  provider.tf
accounts/mbg-infrastructure-production/: account_details.hcl  provider.tf
accounts/mbg-infrastructure-staging/: account_details.hcl  provider.tf
accounts/mbg-management/: account_details.hcl  locals.tf  ous_accounts.tf  provider.tf
accounts/mbg-sandbox/: account_details.hcl  provider.tf  variables.tf
accounts/mbg-security/: account_details.hcl  provider.tf
accounts/mbg-workloads-development/: account_details.hcl  main.tf  provider.tf
accounts/mbg-workloads-production/: account_details.hcl  provider.tf
accounts/mbg-workloads-staging/: account_details.hcl  provider.tf
setup-scripts/: Makefile  README.md  ous_accounts_registry.py  pyproject.toml  setup_account_directories.py  setup_account_directories_test.py  setup_terraform_account_roles.py  setup_terraform_account_roles_test.py  setup_terraform_backend.py  setup_terraform_backend_test.py
setup-scripts/tests/: conftest.py  test_ous_accounts_registry.py
setup-scripts/utils/: config.py  file_ops.py  models.py  parse_ous_accounts_data.py  parse_ous_accounts_data_test.py
